--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "@types/leaflet": "^1.9.21",
+    "@vercel/analytics": "^1.6.1",
     "leaflet": "^1.9.4",
     "next": "16.1.1",
     "react": "19.2.3",
