--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@formspree/react": "^3.0.0",
     "@types/leaflet": "^1.9.21",
     "@vercel/analytics": "^1.6.1",
+    "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
     "next": "16.1.1",
     "react": "19.2.3",
